# lvgl_emscripten

./: CMakeLists.txt  README.md
.github/workflows/: ci_cd.yml  issues.yml
src/: example.cpp  lv_conf.h  main.cpp
src/application/: application.cpp  application.h
src/driver/: display.cpp  display.h  filesystem.cpp  filesystem.h  keyboard.cpp  keyboard.h  memory.cpp  memory.h  mouse.cpp  mouse.h  touch.cpp  touch.h
src/event/: dispatcher.cpp  dispatcher.h  event.h  extensions.c  extensions.h  handler.h  system.c  system.cpp  system.h  window.h
src/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  touch.cpp  touch.h
src/io/: display.cpp  display.h  filesystem.cpp  filesystem.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  touch.cpp  touch.h
src/lvgl/: animation.h  button.cpp  button.h  canvas.cpp  canvas.h  color.cpp  color.h  event.cpp  event.h  font.cpp  font.h  group.cpp  group.h  image.cpp  image.h  label.cpp  label.h  lvgl.cpp  lvgl.h  memory.cpp  memory.h  object.cpp  object.h  screen.cpp  screen.h  style.cpp  style.h  table.cpp  table.h  tabview.cpp  tabview.h  text_area.cpp  text_area.h  theme.cpp  theme.h  timer.cpp  timer.h
src/output/: display.cpp  display.h
src/ui/lvgl/: animation.h  button.cpp  button.h  canvas.cpp  canvas.h  color.cpp  color.h  event.cpp  event.h  font.cpp  font.h  group.cpp  group.h  image.cpp  image.h  label.cpp  label.h  lvgl.cpp  lvgl.h  memory.cpp  memory.h  object.cpp  object.h  screen.cpp  screen.h  style.cpp  style.h  tabview.cpp  tabview.h  theme.cpp  theme.h  timer.cpp  timer.h
src/ui/screens/: main.cpp  main.h
src/ui/widgets/: label_thingy.h  thingy.cpp  thingy.h  widget_thingy.h
static/: index.html  index.js  manifest.json  service_worker.js
static/css/: style.css
